# jsonb_parser

./: .flake8  .gitignore  .mypy.ini  README.rst  pyproject.toml  setup.cfg  setup.py
jsonb_parser/: .gitignore  __init__.py  _parser.pyx  faker.py  jsonb.py  jsonb.pyx  numeric.pyx  parser.py
pg_ubjson/: Makefile  numeric.c.h  ubjson--0.0.1.sql  ubjson.c  ubjson.control  ubjson_numeric.c  ubjson_numeric.h
tests/: conftest.py  test_parse.py
tools/: bench.py
