[metadata]
name = jsonb-parser
description = Parser for the PostgreSQL jsonb format.
url = https://github.com/dvarrazzo/jsonb_parse/
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

project_urls =
    Homepage = https://github.com/dvarrazzo/jsonb_parse/
    Code = https://github.com/dvarrazzo/jsonb_parse/
    Issue Tracker = https://github.com/dvarrazzo/jsonb_parse/issues
    Download = https://pypi.org/project/jsonb-parse/

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires = Cython >= 3.0a5
packages = find:
zip_safe = False

[options.extras_require]
test =
    pytest >= 6.1, < 6.2
    pytest-randomly >= 3.5, < 3.6
    orjson
    py-ubjson
dev =
    black
    flake8 >= 3.8.4, < 3.9
    mypy >= 0.800
    psycopg2-binary >= 2.8, < 2.9
